# behaivor-trees

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  catalog.py  codecs.py  config.py  database.py  main.py  models.py  roundtrip.py  schemas.py  storage.py  validation.py
backend/app/api/: routes.py
backend/app/runtime/: __init__.py  builder.py  stubs.py
backend/behavior_trees_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_roundtrip.py  test_runtime.py  test_validation.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  types.ts
frontend/src/components/: FlowNode.tsx  Inspector.tsx  Palette.tsx  RunControls.tsx  TreeSidebar.tsx
frontend/src/lib/: api.ts  catalog.ts  tree.test.ts  tree.ts
frontend/src/styles/: app.css
