[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behavior-trees-backend"
version = "0.1.0"
description = "Behavior trees editor backend"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "py-trees>=2.4.0,<3.0.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

